<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
				 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.mslivo</groupId>
		<artifactId>pixeluiengine</artifactId>
		<version>1.0-SNAPSHOT</version>
	</parent>
	<artifactId>pixeluiengine-core</artifactId>
	<packaging>jar</packaging>

	<dependencies>
		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx</artifactId>
		</dependency>
		<dependency>
			<groupId>com.badlogicgames.gdx</groupId>
			<artifactId>gdx-backend-lwjgl3</artifactId>
		</dependency>

		<dependency>
			<groupId>com.badlogicgames.gdx-controllers</groupId>
			<artifactId>gdx-controllers-core</artifactId>
		</dependency>

		<dependency>
			<groupId>com.badlogicgames.gdx-controllers</groupId>
			<artifactId>gdx-controllers-desktop</artifactId>
		</dependency>
	</dependencies>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/MarkusSlivovsky/SimEngine</url>
		</repository>
	</distributionManagement>

	<build>
		<resources>
			<resource>
				<directory>../assets</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
